# MetasequoiaImeServer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
assets/config/: config.toml
scripts/: lcompile-release.ps1  llaunch-release.ps1  lsign.ps1  test_settings_focus.ps1
scripts/cloud_ime_api/: cloud.ps1
scripts/config_files/: CMakeLists.txt
scripts/config_files/tests/: CMakeLists.txt
src/: main.cpp
src/ai/: ai_assistant.cpp  ai_assistant.h
src/cloud/: cloud_ime.cpp  cloud_ime.h
src/config/: ime_config.cpp  ime_config.h
src/conversion/: chinese_converter.cpp  chinese_converter.h
src/defines/: defines.h  globals.h
src/emoji-panel/: EmojiPanel.cpp  EmojiPanel.h  main.cpp
src/english/: english_ime.cpp  english_ime.h
src/global/: globals.h
src/handwriting-panel/: HandwritingPanel.cpp  HandwritingPanel.h  main.cpp  resource.h
src/ipc/: active_client_state.h  candidate_ui_action_policy.h  candidate_ui_owner.h  event_listener.cpp  event_listener.h  focus_session_policy.h  input_key_policy.h  ipc.cpp  ipc.h  outbound_session_state.h  pipe_write_policy.h
src/keyboard-panel/: KeyboardPanel.cpp  KeyboardPanel.h  keyboard_panel.rc  main.cpp  resource.h
src/log/: fanylog.h
src/quick-phrases/: quick_phrase_query.cpp  quick_phrase_query.h
src/sciter/: candidate_window_sciter.cpp
src/session/: engine_input_session.cpp  engine_input_session.h  input_session.h  session_factory.cpp  session_factory.h  shuangpin_input_session.cpp  shuangpin_input_session.h
src/settings/: dictionary_manager.cpp  dictionary_manager.h  settings_app.cpp  settings_launcher.cpp  settings_launcher.h
src/unicode/: unicode_query.cpp  unicode_query.h
src/utils/: ime_utils.cpp  ime_utils.h  single_instance.h  webview_utils.cpp  window_utils.cpp
src/voice-input/: cue_player.cpp  cue_player.h  mvi_utils.h  voice_input_overlay_utils.cpp  voice_input_service.cpp  voice_input_service.h  wave_overlay.cpp  wave_overlay.h
src/watchdog/: main.cpp  watchdog_protocol.h
src/webview2/: windows_webview2.cpp  windows_webview2.h
src/window/: floating_toolbar_visibility_policy.h  ime_windows.cpp  ime_windows.h  window_hook.cpp
tests/: .gitignore  CMakeLists.txt  README.md
tests/includes/: test_framework.h
tests/src/: main.cpp  test_active_client_state.cpp  test_candidate_ui_action_policy.cpp  test_candidate_ui_owner.cpp  test_engine_shuangpin_session.cpp  test_english_dictionary.cpp  test_floating_toolbar_visibility_policy.cpp  test_input_key_policy.cpp  test_ipc_protocol_constants.cpp  test_outbound_session_state.cpp  test_pipe_write_policy.cpp  test_quanpin_scheme.cpp  test_shuangpin.cpp  test_shuangpin_query.cpp  test_shuangpin_scheme.cpp  test_wubi.cpp
