cmake_minimum_required(VERSION 3.25.0)

set(PROJECT_NAME "MetasequoiaImeServer")

cmake_policy(SET CMP0167 NEW)
project(${PROJECT_NAME} VERSION 1.0)

# Boost
set(Boost_ROOT "C:/Users/sonnycalcr/scoop/apps/boost/current")
set (Boost_USE_STATIC_LIBS ON)
find_package(Boost REQUIRED COMPONENTS locale json)
include_directories(${Boost_INCLUDE_DIRS})

# fmt, spdlog and sqlite3
find_package(fmt CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(unofficial-sqlite3 CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_definitions(
    /D_UNICODE=1
    /DUNICODE=1
    /DFANY_DEBUG=1
)

# add_definitions(
#     /DFANY_DEBUG=1
# )

# For utf8cpp, make it use C++11 and later
add_compile_options(/Zc:__cplusplus)

include_directories("./")
include_directories("./src/")
include_directories("./MetasequoiaImeEngine/utfcpp/source/")

set(MY_EXECUTABLE_NAME "MetasequoiaImeServer")

set(SRC_FILES
    "./src/cloud/cloud_ime.cpp"
    "./src/cloud/cloud_ime.h"
    "./src/config/ime_config.cpp"
    "./src/config/ime_config.h"
    "./src/defines/defines.h"
    "./src/global/globals.h"
    "./src/ipc/event_listener.cpp"
    "./src/ipc/event_listener.h"
    "./src/ipc/ipc.cpp"
    "./src/ipc/ipc.h"
    "./src/log/fanylog.cpp"
    "./src/log/fanylog.h"
    "./src/resource/resource.h"
    "./src/resource/resource.rc"
    "./src/utils/common_utils.cpp"
    "./src/utils/common_utils.h"
    "./src/utils/ime_utils.cpp"
    "./src/utils/ime_utils.h"
    "./src/utils/webview_utils.cpp"
    "./src/utils/webview_utils.h"
    "./src/utils/window_utils.cpp"
    "./src/utils/window_utils.h"
    "./src/webview2/windows_webview2.cpp"
    "./src/webview2/windows_webview2.h"
    "./src/window/ime_windows.cpp"
    "./src/window/ime_windows.h"
    "./src/window/window_hook.cpp"
    "./src/window/window_hook.h"
    "./src/main.cpp"
)

set(SRC_FILES_IME_ENGINE
    "./MetasequoiaImeEngine/shuangpin/common_utils.cpp"
    "./MetasequoiaImeEngine/shuangpin/dictionary.cpp"
    "./MetasequoiaImeEngine/shuangpin/pinyin_utils.cpp"
)

set(SRC_FILES_GOOGLEIME
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/dictbuilder.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/dictlist.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/dicttrie.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/lpicache.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/matrixsearch.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/mystdlib.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/ngram.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/pinyinime.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/searchutility.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/spellingtable.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/spellingtrie.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/splparser.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/sync.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/userdict.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/utf16char.cpp"
    "./MetasequoiaImeEngine/googlepinyinime-rev/src/share/utf16reader.cpp"
)

add_executable(${MY_EXECUTABLE_NAME} WIN32
    ${SRC_FILES}
    ${SRC_FILES_IME_ENGINE}
    ${SRC_FILES_GOOGLEIME}
)

# Tomlplusplus, Webview2 and other head-only libraries
target_include_directories(${PROJECT_NAME}
    PRIVATE
    "${CMAKE_SOURCE_DIR}/build/vcpkg_installed/x64-windows/include"
)

target_link_libraries(${PROJECT_NAME} PRIVATE unofficial::sqlite3::sqlite3 fmt::fmt spdlog::spdlog Boost::locale Boost::json nlohmann_json::nlohmann_json)
target_link_libraries(${PROJECT_NAME} PRIVATE winhttp)

# WebView2 loader (required for CreateCoreWebView2EnvironmentWithOptions)
set(WEBVIEW2_VCPKG_ROOT "${CMAKE_SOURCE_DIR}/build/vcpkg_installed/x64-windows")
set(WEBVIEW2_LOADER_RELEASE "${WEBVIEW2_VCPKG_ROOT}/lib/WebView2Loader.dll.lib")
set(WEBVIEW2_LOADER_DEBUG "${WEBVIEW2_VCPKG_ROOT}/debug/lib/WebView2Loader.dll.lib")
target_link_libraries(${PROJECT_NAME} PRIVATE
    $<$<CONFIG:Debug>:${WEBVIEW2_LOADER_DEBUG}>
    $<$<CONFIG:Release>:${WEBVIEW2_LOADER_RELEASE}>
)

# Ensure the loader DLL is next to the executable
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
        $<$<CONFIG:Debug>:${WEBVIEW2_VCPKG_ROOT}/debug/bin/WebView2Loader.dll>
        $<$<CONFIG:Release>:${WEBVIEW2_VCPKG_ROOT}/bin/WebView2Loader.dll>
        $<TARGET_FILE_DIR:${PROJECT_NAME}>
)
